--- a/Diagnosis/Screens/Card2.xaml
+++ b/Diagnosis/Screens/Card2.xaml
@@ -117,7 +117,7 @@
         </Style>
     </UserControl.Resources>
     <Grid>
-        <TabControl TabStripPlacement="Left">
+        <TabControl TabStripPlacement="Left" Padding="0">
             <TabControl.Resources>
                 <Style x:Key="tabHeaderSpecial" TargetType="{x:Type TabItem}">
                     <Setter Property="IsEnabled" Value="False" />
@@ -168,7 +168,7 @@
             </TabItem>
 
             <TabItem Header="Инфо" IsEnabled="True" IsSelected="True">
-                <StackPanel Margin="0,0,10,0">
+                <StackPanel Margin="10">
                     <controls:NameEditor />
                     <controls:SexChooser Margin="0,5" Width="100" HorizontalAlignment="Left" />
                     <controls:AgePicker Margin="0,5" />
