--- a/Diagnosis/Controls/TreeItem.xaml
+++ b/Diagnosis/Controls/TreeItem.xaml
@@ -8,15 +8,11 @@
              xmlns:Converters="clr-namespace:Diagnosis.Converters" x:Name="treeItem" x:Class="Diagnosis.Controls.TreeItem"
              mc:Ignorable="d"
              d:DesignHeight="20" d:DesignWidth="300"
->
+             d:DataContext="{StaticResource symptomVM}">
     <UserControl.Resources>
         <Converters:NegBooleanToVisibilityConverter x:Key="NegBooleanToVisibilityConverter" />
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </UserControl.Resources>
-
-    <d:DataContext>
-        <StaticResource ResourceKey="symptomVM" />
-    </d:DataContext>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -56,7 +52,8 @@
 			Grid.Row="1"
 			Grid.Column="1"
 			Visibility="Collapsed"
-			KeyUp="search_KeyUp"
+			KeyUp="search_KeyUp"
+
  />
     </Grid>
 </UserControl>
