--- a/Diagnosis/MainWindow.xaml
+++ b/Diagnosis/MainWindow.xaml
@@ -27,6 +27,9 @@
                 <screen:Card2 Margin="10" x:Name="second">
                 </screen:Card2>
             </TabItem>
+            <TabItem>
+                <controls:TileControl/>
+            </TabItem>
         </TabControl>
     </Grid>
 </Window>
