--- a/Diagnosis/App.xaml
+++ b/Diagnosis/App.xaml
@@ -8,7 +8,8 @@
         <vm:PatientViewModel x:Key="patientVM" />
         <vm:SymptomViewModel x:Key="symptomVM" />
         <vm:SearchViewModel x:Key="searchVM" />
-        
+        <vm:SymptomExplorerViewModel x:Key="symptomExplorerVM" />
+
         <Style TargetType="TextBlock" x:Key="watermark">
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="Margin">
