nesting order of symptoms

--- a/Diagnosis/Controls/TileView.xaml
+++ b/Diagnosis/Controls/TileView.xaml
@@ -24,12 +24,12 @@
                 ItemsSource="{Binding Breadcrumbs}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <WrapPanel Orientation="Horizontal" />
+                        <StackPanel Orientation="Horizontal" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <controls:TreeItem />
+                        <TextBlock Text="{Binding Name}" Margin="5,0"/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
