--- a/Diagnosis/Controls/TreeItem.xaml
+++ b/Diagnosis/Controls/TreeItem.xaml
@@ -8,7 +8,8 @@
              xmlns:Converters="clr-namespace:Diagnosis.Converters" x:Name="treeItem" x:Class="Diagnosis.Controls.TreeItem"
              mc:Ignorable="d"
              d:DesignHeight="20" d:DesignWidth="300"
-             d:DataContext="{StaticResource symptomVM}">
+             d:DataContext="{StaticResource symptomVM}"             
+    >
     <UserControl.Resources>
         <Converters:NegBooleanToVisibilityConverter x:Key="NegBooleanToVisibilityConverter" />
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
