--- a/Diagnosis/Styles/TreeStyle.xaml
+++ b/Diagnosis/Styles/TreeStyle.xaml
@@ -4,8 +4,6 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:conv="clr-namespace:Diagnosis.Converters">
 
-    <conv:SymptomToBackground x:Key="symptomToBackground" />
-
     <SolidColorBrush x:Key="GlyphBrush" Color="#444" />
     <SolidColorBrush x:Key="itemSelectedBrush" Color="#FFFF8A16" />
     <SolidColorBrush x:Key="itemSelectedNotActiveBrush"
@@ -83,7 +81,7 @@
         <Border Name="Bd"
                 Binding.SourceUpdated ="Bd_SourceUpdated"
                 Binding.TargetUpdated ="Bd_TargetUpdated"
-                Background="{Binding Content, ElementName=PART_Header, UpdateSourceTrigger=Default, Converter={StaticResource symptomToBackground}}"
+                Background="{Binding Content, ElementName=PART_Header, Converter={StaticResource symptomToBackground}}"
                 BorderBrush="{TemplateBinding BorderBrush}"
                 BorderThickness="{TemplateBinding BorderThickness}"
                 Padding="0,5"
