--- a/Diagnosis/Controls/TileView.xaml
+++ b/Diagnosis/Controls/TileView.xaml
@@ -14,10 +14,12 @@
         </Grid.RowDefinitions>
 
         <Grid x:Name="explorer"
-        Loaded="explorer_Loaded"
+              Loaded="explorer_Loaded" 
+              KeyUp="explorer_KeyUp"
 >
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" MaxHeight="200" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
@@ -41,21 +43,31 @@
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </StackPanel>
+            
+            <controls:FloatSearch x:Name="search"
+                                Grid.Row="1"
+                                Visibility="Collapsed"
+                                KeyUp="search_KeyUp"
 
-            <ItemsControl x:Name="list"
-                ItemsSource="{Binding Symptoms}"
-                Grid.Row="1">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel Orientation="Horizontal" />
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <controls:TileItem />
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+ />
+            <ScrollViewer x:Name="list" 
+                          Grid.Row="2"
+                          VerticalScrollBarVisibility="Auto" >
+                <ItemsControl 
+                    ItemsSource="{Binding Symptoms}"
+                    >
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <controls:TileItem />
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
         </Grid>
 
         <DockPanel Grid.Row="1">
