--- a/Diagnosis/Controls/FloatSearch.xaml
+++ b/Diagnosis/Controls/FloatSearch.xaml
@@ -1,5 +1,4 @@
-﻿<UserControl
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,7 +9,8 @@
              x:Name="floatSearch"
              GotFocus="UserControl_GotFocus"
              KeyUp="UserControl_KeyUp"
-             h:EnhancedFocusScope.IsEnhancedFocusScope="True" Background="#FFFFE0E0">
+             h:EnhancedFocusScope.IsEnhancedFocusScope="True"
+             Background="#FFFFE0E0">
     <UserControl.Resources>
         <Converters:CountToVisability x:Key="CountToVisability" />
     </UserControl.Resources>
@@ -25,18 +25,19 @@
             </Grid.ColumnDefinitions>
             <TextBox x:Name="input"
                      Text="{Binding Query, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                     KeyDown="input_KeyDown"
+                     PreviewKeyDown="input_PreviewKeyDown"
  />
-            <Button Grid.Column="1" 
-                    Content="×" 
+            <Button Grid.Column="1"
+                    Content="×"
                     Width="{Binding ActualHeight, Mode=OneWay, RelativeSource={RelativeSource Self}}"
-                    Command="{Binding ClearCommand}"/>
+                    Command="{Binding ClearCommand}" />
         </Grid>
         <ListView x:Name="results"
 			ItemsSource="{Binding Results}"
 			SelectionChanged="results_SelectionChanged"
 			SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"
 			IsTabStop="True"
+                  MaxHeight="100"
 			Visibility="{Binding ResultsCount, Converter={StaticResource CountToVisability}, Mode=OneWay}"
 >
             <ListView.ItemTemplate>
