--- a/Diagnosis/Screens/Card2.xaml
+++ b/Diagnosis/Screens/Card2.xaml
@@ -84,6 +84,9 @@
             <TabItem Header="Диагноз">
                 <controls:TileView />
             </TabItem>
+            <TabItem Header="Автодополнение">
+                <controls:AutoComplete />
+            </TabItem>
         </TabControl>
     </Grid>
 </UserControl>
